# app.js
@@ -14,7 +14,6 @@ const categoriesRoutes = require('./src/categories/categoriesRoutes');
 const productsRoutes = require('./src/products/productsRoutes');
 const paymentMethodsRoutes = require('./src/paymentMethods/paymentMethodsRoutes');
 const ordersRoutes = require('./src/orders/orderRoutes');
-const orderDetailsRoutes = require('./src/orderDetails/orderDetailsRoutes');
 const orderStatusRoutes = require('./src/orderStatus/orderStatusRoutes');
 const authRoutes = require('./src/auth/authRoutes');
 const likesRoutes = require('./src/likes/likesRoutes');
@@ -41,7 +40,6 @@ app.use('/categories', verifyToken, categoriesRoutes);
 app.use('/products', verifyToken, productsRoutes);
 app.use('/paymentMethods', verifyToken, paymentMethodsRoutes);
 app.use('/orders', verifyToken, ordersRoutes);
-app.use('/orderDetails', verifyToken, orderDetailsRoutes);
 app.use('/orderStatus', verifyToken, orderStatusRoutes);
 app.use('/likes', verifyToken, likesRoutes);
 app.use('/cartStatus', verifyToken, cartStatusRoutes);
