# src/auth/authRoutes.js
@@ -2,10 +2,37 @@ const express = require('express');
 const router = express.Router();
 const authController = require('./authController');
 
-// Ruta para registrar usuarios
+/**
+ * @swagger
+ * tags:
+ *   name: Auth
+ *   description: Endpoints related to authentication and authorization
+ */
+
+
+/**
+ * @swagger
+ * /register:
+ *   post:
+ *     summary: Allow to register in the app
+ *     tags: [Auth]
+ *     responses:
+ *       201:
+ *         description: List of categories
+ */
 router.post('/register', authController.registerUser);
 
-// Ruta para iniciar sesión
+
+/**
+ * @swagger
+ * /login
+ *   post:
+ *     summary: Allows the user to gets in to the PC
+ *     tags: [Auth]
+ *     responses:
+ *       200:
+ *         description: A JWT for login
+ */
 router.post('/login', authController.loginUser);
 
 module.exports = router;
